Moving towards less guava